fixed img size and white space adjustments

--- a/styles/partials/_general.scss
+++ b/styles/partials/_general.scss
@@ -56,6 +56,7 @@ a {
 }
 
 .title {
+  position: relative;
   display: flex;
   height: 100vh;
   justify-content: center;
