--- a/styles/styles.css
+++ b/styles/styles.css
@@ -402,6 +402,7 @@ a:visited {
 }
 
 .title {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -899,19 +900,19 @@ header {
 }
 
 .projects img {
-  width: 250px;
+  width: 200px;
   height: auto;
 }
 
 @media all and (min-width: 375px) {
   .projects img {
-    width: 300px;
+    width: 250px;
   }
 }
 
 @media all and (min-width: 750px) {
   .projects img {
-    width: 450px;
+    width: 425px;
   }
 }
 
@@ -989,9 +990,11 @@ header {
 
 .projects-info .github {
   width: 50px;
+  margin-right: 5px;
 }
 
 .projects-info .live {
-  width: 49px;
+  width: 48px;
+  margin-left: 5px;
 }
 /*# sourceMappingURL=styles.css.map */
